crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__S506_S506.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 7
Added: 0

--- Removed ---
S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:41:24
   |
41 | yaml.load("{}", Loader=yaml.BaseLoader)
   |                        ^^^^^^^^^^^^^^^
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:42:24
   |
42 | yaml.load("{}", Loader=yaml.CBaseLoader)
   |                        ^^^^^^^^^^^^^^^^
   |


S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:43:17
   |
43 | yaml.load("{}", yaml.BaseLoader)
   |                 ^^^^^^^^^^^^^^^
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:44:17
   |
44 | yaml.load("{}", yaml.CBaseLoader)
   |                 ^^^^^^^^^^^^^^^^
   |


S506 Probable use of unsafe loader `BaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:46:24
   |
46 | yaml.load("{}", Loader=BaseLoader)
   |                        ^^^^^^^^^^
   |


S506 Probable use of unsafe loader `BL` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:48:24
   |
48 | yaml.load("{}", Loader=BL)
   |                        ^^
   |


S506 Probable use of unsafe loader `CBaseLoader` with `yaml.load`. Allows instantiation of arbitrary objects. Consider `yaml.safe_load`.
  --> S506.py:50:24
   |
50 | yaml.load("{}", Loader=CBaseLoader)
   |                        ^^^^^^^^^^^
   |
