crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__S509_S509.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 4

--- Added ---
S509 You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure.
  --> S509.py:15:1
   |
15 | pysnmp.hlapi.asyncio.UsmUserData("user")  # S509
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |


S509 You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure.
  --> S509.py:16:1
   |
16 | pysnmp.hlapi.v3arch.asyncio.UsmUserData("user")  # S509
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |


S509 You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure.
  --> S509.py:17:1
   |
17 | pysnmp.hlapi.v3arch.asyncio.auth.UsmUserData("user")  # S509
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |


S509 You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure.
  --> S509.py:18:1
   |
18 | pysnmp.hlapi.auth.UsmUserData("user")  # S509
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
