crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__preview__suspicious-eval-usage_S307.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 2

--- Added ---
S307 Use of possibly insecure function; consider using `ast.literal_eval`
  --> S307.py:16:5
   |
15 | # https://github.com/astral-sh/ruff/issues/15522
16 | map(eval, [])
   |     ^^^^
17 | foo = eval
   |


S307 Use of possibly insecure function; consider using `ast.literal_eval`
  --> S307.py:17:7
   |
15 | # https://github.com/astral-sh/ruff/issues/15522
16 | map(eval, [])
17 | foo = eval
   |       ^^^^
